[package]
authors = ["Dhruv kumar <darbaga10@gmail.com>"]
name = "tolk"
description = "bindings to tolk.dll, a library to talk to screen readers"
repository = "https://github.com/darbaga/tolk-rs"
readme = "README.md"
keywords = ["accessibility", "a11y"]
categories = ["api-bindings"]
license = "MIT"
version = "0.2.0"
edition = "2018"

[dependencies]
tolk-sys = "0.2"
